--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "grunt": "~0.4.1",
     "grunt-es6-module-transpiler": "~0.4.0",
     "load-grunt-config": "~0.5.0",
-    "benchmark": "~1.0.0",
-    "lodash": "~2.2.1",
+    "benchmark": "git://github.com/bestiejs/benchmark.js",
+    "lodash": "~2.3.0",
     "microtime": "~0.4.0",
     "grunt-cli": "~0.1.10",
     "load-grunt-tasks": "~0.2.0",
