--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "grunt-contrib-connect": "~0.5.0",
     "grunt-contrib-watch": "~0.5.3",
     "grunt-contrib-copy": "~0.4.1",
-    "grunt-contrib-clean": "~0.5.0"
+    "grunt-contrib-clean": "~0.5.0",
+    "when": "~2.6.0",
+    "rsvp": "~2.0.4",
+    "bluebird": "~0.9.10-1"
   },
   "scripts": {
     "start": "npm build && node index",
