--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "grunt-contrib-clean": "~0.5.0",
     "when": "~2.7.0",
     "rsvp": "~3.0.0",
-    "bluebird": "~0.11.5-1"
+    "bluebird": "~0.11.5-1",
+    "es6-module-transpiler": "~0.3.6",
+    "glob": "~3.2.7",
+    "mkdirp": "~0.3.5"
   },
   "scripts": {
     "start": "npm build && node index",
