--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "bluebird": "~0.11.5-1",
     "es6-module-transpiler": "~0.3.6",
     "glob": "~3.2.7",
-    "mkdirp": "~0.3.5"
+    "mkdirp": "~0.3.5",
+    "q": "~1.0.0"
   },
   "scripts": {
     "start": "npm build && node index",
