--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "load-grunt-config": "~0.5.0",
     "benchmark": "git://github.com/bestiejs/benchmark.js",
     "lodash": "~2.3.0",
-    "microtime": "~0.4.0",
     "grunt-cli": "~0.1.10",
     "load-grunt-tasks": "~0.2.0",
     "grunt-contrib-concat": "~0.3.0",
@@ -23,7 +22,8 @@
     "grunt-contrib-clean": "~0.5.0",
     "when": "~2.7.0",
     "rsvp": "~3.0.0",
-    "bluebird": "~0.11.5-1"
+    "bluebird": "~0.11.5-1",
+    "glob": "~3.2.7"
   },
   "scripts": {
     "start": "npm build && node index",
