--- a/package.json
+++ b/package.json
@@ -21,12 +21,13 @@
     "grunt-contrib-copy": "~0.4.1",
     "grunt-contrib-clean": "~0.5.0",
     "when": "~3.2.2",
-    "rsvp": "~3.0.0",
-    "bluebird": "~0.11.5-1",
+    "rsvp": "~3.0.6",
+    "lie": "~2.7.4",
+    "bluebird": "1.2.4",
     "es6-module-transpiler": "~0.3.6",
     "glob": "~3.2.7",
     "mkdirp": "~0.3.5",
-    "q": "~1.0.0"
+    "q": "~1.0.1"
   },
   "scripts": {
     "start": "npm build && node index",
