more stuff and readme

--- a/package.json
+++ b/package.json
@@ -7,27 +7,27 @@
     "lib": "lib"
   },
   "devDependencies": {
-    "jshint": "~0.9",
-    "grunt": "~0.4.1",
-    "grunt-es6-module-transpiler": "~0.6.0",
-    "load-grunt-config": "~0.5.0",
     "benchmark": "git://github.com/bestiejs/benchmark.js",
-    "lodash": "~2.4.1",
-    "grunt-cli": "~0.1.10",
-    "load-grunt-tasks": "~0.2.0",
-    "grunt-contrib-concat": "~0.3.0",
-    "grunt-contrib-connect": "~0.5.0",
-    "grunt-contrib-watch": "~0.5.3",
-    "grunt-contrib-copy": "~0.4.1",
-    "grunt-contrib-clean": "~0.5.0",
-    "when": "~3.2.2",
-    "rsvp": "~3.0.6",
-    "lie": "~2.7.4",
     "bluebird": "2.0.2",
     "es6-module-transpiler": "~0.3.6",
     "glob": "~3.2.7",
+    "grunt": "~0.4.1",
+    "grunt-cli": "~0.1.10",
+    "grunt-contrib-clean": "~0.5.0",
+    "grunt-contrib-concat": "~0.3.0",
+    "grunt-contrib-connect": "~0.5.0",
+    "grunt-contrib-copy": "~0.4.1",
+    "grunt-contrib-watch": "~0.5.3",
+    "grunt-es6-module-transpiler": "~0.6.0",
+    "jshint": "~0.9",
+    "lie": "~2.7.4",
+    "load-grunt-config": "~0.5.0",
+    "load-grunt-tasks": "~0.2.0",
+    "lodash": "~2.4.1",
     "mkdirp": "~0.3.5",
-    "q": "~1.0.1"
+    "q": "~1.0.1",
+    "rsvp": "~3.0.6",
+    "when": "^3.5.0"
   },
   "scripts": {
     "start": "npm build && node index",
