--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "lib": "lib"
   },
   "devDependencies": {
-    "benchmark": "git://github.com/bestiejs/benchmark.js",
     "bluebird": "2.0.2",
     "es6-module-transpiler": "~0.3.6",
     "glob": "~3.2.7",
@@ -43,6 +42,6 @@
   "author": "Nitin Joshi & Stefan Penner",
   "license": "MIT",
   "dependencies": {
-    "benchmark": "git://github.com/bestiejs/benchmark.js"
+    "benchmark": "^2.1.0"
   }
 }
